trunk/Archive2/3f/b55519d506172a/output
g++ (GCC) 4.9.0
Copyright (C) 2014 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

main.cpp: In function 'decltype(auto) f()[12]':
main.cpp:8:12: error: cannot convert 'float [12]' to 'float [12]' in return
     return v;
            ^
main.cpp:9:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
clang version 3.5.0 (tags/RELEASE_350/final 217394)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:8:12: error: array initializer must be an initializer list
    return v;
           ^
1 error generated.
