trunk/Archive2/3f/b55519d506172a/main.cpp
#include <iostream>
#include <typeinfo>

float v[12];

decltype(auto) f()
{
    return v;
}

int main()
{
    std::cout <<typeid(decltype(f())).name() << std::endl;
}